# PoissonTest

./: .clang_complete  .gitignore  CMakeLists.txt  README.md  TriPoisson.hpp  TriPoissonCPU  TriPoissonDirect  TriPoissonGPU  TriPoissonSOR  class_LinSolver.hpp  main.cpp  misc.hpp  poisson.cpp  poissonDirect.cpp  runScript  typedef.hpp  verification.py
AmgXTest/: .clang_complete  CMakeLists.txt  vec.txt
AmgXTest/configFiles/: config.amgx  config.yaml  configMPI.amgx
AmgXTest/src/: SpMt.cpp  SpMt.hpp  funcDef.hpp  generateA.tcc  headers.hpp  mGPU_MPI.cpp  miscsFuncs.cpp  sGPU.cpp  sGPU_file.cpp
ParamFiles/: CG_Params.xml  GMRES_Params.xml  ILUT_Params.xml  MueLu_Params.xml
PetAmgXTest/: .clang_complete  CMakeLists.txt  Report.ipynb
PetAmgXTest/3DTest/: solversAmgXOptions.info
PetAmgXTest/3DTest/128CPU_Cmp_Nx500Ny500Nz200/: job.qsub  perf.txt  solversPetscOptions.info  test.sh
PetAmgXTest/3DTest/16GPU_NxNy200Nz100_Opt/: job.qsub  performance1.txt  performance1a.txt  performance1b.txt  slurm-job-1340045.err  solversAmgXOptions0.info  solversAmgXOptions1.info
PetAmgXTest/3DTest/16GPU_NxNyNz320/: job.qsub  performance1.txt
PetAmgXTest/3DTest/1CPU_Weak_Scaling/: job.qsub  performance3.txt  performance4.txt  performance5.txt
PetAmgXTest/3DTest/1GPU_Weak_Scaling/: job.qsub  performance1.txt  performance2.txt  performance3.txt  performance4.txt  performance5.txt  slurm-job-1339824.err
PetAmgXTest/3DTest/24GPU_Cmp_Nx500Ny500Nz200/: V_HMIS_LU_0.8.info  job.qsub  perf.txt
PetAmgXTest/3DTest/2CPU_Weak_Scaling/: job.qsub  performance3.txt  performance4.txt  performance5.txt
PetAmgXTest/3DTest/2GPU_Weak_Scaling/: job.qsub  performance1.txt  performance2.txt  performance3.txt  performance4.txt  performance5.txt  slurm-job-1339825.err
PetAmgXTest/3DTest/32CPU_Cmp_NxNyNz160/: job.qsub  perf.txt
PetAmgXTest/3DTest/32GPU_Cmp_Nx1000Ny500Nz200/: job.qsub  perf.txt
PetAmgXTest/3DTest/40GPU_Nx1280Ny640Nz200/: job.qsub  performance1.txt
PetAmgXTest/3DTest/40GPU_NxNy640Nz100/: job.qsub  performance1.txt
PetAmgXTest/3DTest/40GPU_NxNyNz320/: job.qsub  performance1.txt
PetAmgXTest/3DTest/4CPU_Weak_Scaling/: job.qsub  performance3.txt  performance4.txt  performance5.txt
PetAmgXTest/3DTest/4GPU_NxNyNz200/: job.qsub  performance1.txt
PetAmgXTest/3DTest/4GPU_Weak_Scaling/: job.qsub  performance1.txt  performance2.txt  performance3.txt  performance4.txt  performance5.txt  slurm-job-1339826.err
PetAmgXTest/3DTest/512CPU_Weak_Scaling/: job.qsub  perf.txt
PetAmgXTest/3DTest/8CPU_Weak_Scaling/: job.qsub  performance3.txt  performance4.txt  performance5.txt
PetAmgXTest/3DTest/8GPU_NxNyNz200/: job.qsub  performance1.txt
PetAmgXTest/3DTest/8GPU_Weak_Scaling/: job.qsub  performance1.txt  performance2.txt  performance3.txt  performance4.txt  performance5.txt  slurm-job-1339827.err
PetAmgXTest/3DTest/CPU_Strong_Scaling_NxNy200Nz100/: job.qsub  performance1.txt  performance2.txt  performance3.txt  performance4.txt  performance5.txt  performance6.txt  performance7.txt  performance8.txt
PetAmgXTest/3DTest/CPU_Strong_Scaling_NxNyNz200/: job.qsub  performance1.txt  performance2.txt  performance3.txt  performance4.txt  performance5.txt  performance6.txt  performance7.txt  performance8.txt
PetAmgXTest/3DTest/GPU_Strong_Scaling_NxNy200Nz100/: performance1.txt  performance2.txt  performance3.txt  performance4.txt  performance5.txt  performance6.txt
PetAmgXTest/3DTest/GPU_Strong_Scaling_NxNyNz200/: performance1.txt  performance2.txt  performance3.txt  performance4.txt
PetAmgXTest/3DTest/Optimizations/: grabData.py  grabData.py~  grabData.pz~
PetAmgXTest/3DTest/Optimizations/16GPU_Opt_Nx320Ny160Nz80/: F_HMIS_GS_0.4_6.info  F_HMIS_GS_0.5_8.info  F_HMIS_LU_0.4.info  F_PMIS_GS_0.2_8.info  F_PMIS_GS_0.3_6.info  F_PMIS_GS_0.4_2.info  F_PMIS_GS_0.5_2.info  F_PMIS_GS_0.6_2.info  F_PMIS_GS_1.0_8.info  F_PMIS_LU_0.2.info  F_PMIS_LU_0.3.info  F_PMIS_LU_0.6.info  F_PMIS_LU_0.8.info  V_HMIS_GS_0.1_8.info  V_HMIS_GS_0.3_6.info  V_HMIS_GS_0.8_6.info  V_HMIS_GS_0.9_6.info  V_PMIS_GS_0.3_10.info  V_PMIS_GS_0.3_6.info  job.qsub  job2.qsub  pert.txt  slurm-job-1340259.err  slurm-job-1340308.err  slurm-job-1340309.err  slurm-job-1340310.err  slurm-job-1340311.err
PetAmgXTest/3DTest/Optimizations/16GPU_Opt_NxNyNz160/: F_HMIS_GS_0.2_10.info  F_HMIS_GS_0.6_2.info  F_HMIS_GS_0.9_10.info  F_HMIS_GS_1.0_6.info  F_PMIS_GS_0.1_6.info  F_PMIS_GS_0.3_10.info  F_PMIS_GS_0.5_4.info  F_PMIS_GS_0.8_10.info  F_PMIS_GS_0.8_2.info  F_PMIS_GS_0.8_4.info  F_PMIS_GS_0.9_4.info  V_HMIS_GS_0.3_2.info  V_HMIS_GS_0.5_6.info  V_HMIS_GS_0.7_2.info  V_HMIS_GS_0.8_10.info  V_HMIS_GS_1.0_4.info  V_HMIS_LU_0.4.info  V_HMIS_LU_0.5.info  V_HMIS_LU_0.7.info  V_PMIS_GS_0.2_2.info  V_PMIS_GS_0.9_2.info  V_PMIS_LU_0.2.info  job.qsub  pert.txt
PetAmgXTest/3DTest/Optimizations/1GPU_Opt_Nx320Ny160Nz80/: F_HMIS_GS_0.2_8.info  F_HMIS_GS_0.4_10.info  F_HMIS_GS_0.4_2.info  F_HMIS_GS_0.6_10.info  F_HMIS_GS_0.7_2.info  (+15 more)
PetAmgXTest/3DTest/Strong_Scaling_NxNy200Nz100/: job.qsub  performance1.txt  performance2.txt  performance3.txt  performance4.txt  performance5.txt  performance6.txt
PetAmgXTest/3DTest/Strong_Scaling_NxNyNz200/: job.qsub  performance1.txt  performance2.txt  performance3.txt  performance4.txt
PetAmgXTest/configFiles/: classicalAMG.amgx  config.amgx  pureSmoother.amgx
PetAmgXTest/src/: AmgXSolver.cpp  AmgXSolver.hpp  GPUFuncs.cpp  PetAmgX.cpp  PetAmgXCPU.cpp  class_AmgXSolver.cpp  class_AmgXSolver.hpp  createKSP.cpp  generateA.cpp  generateExt.cpp  generateGrid.cpp  generateRHS.cpp  getPartVec.cpp  headers.hpp
TrilinosTest/: do-configure
TrilinosTest/ParamFiles/: MueLu_Params.xml
TrilinosTest/ShellScripts/: CG_RILUK_runScript  MVM_runScript
TrilinosTest/src/: poissonSOR.cpp
src/: MVM.cpp  poisson.cpp  poissonAMG.cpp  poissonDirect.cpp
utils/: CG_DIAGONAL_runScript  CG_ILUT_runScript  CG_runScript  MVM_runScript  checkResult.py  generateA.py  generateMtxFile.py  generateVecs.py  runScript  verification.py
utils/PythonScripts/: generateA.py  generateDiaPrec.py  generateMtxFile.py  show_matrixA.py
(+197 files in other folders)
